--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.4.10",
     "expo": "~54.0.13",
